<resources>
    <string name="app_name">Product</string>
    <string name="san_pham">%s Sản phẩm</string>
    <string name="san_pham_xml">Sản phẩm</string>
    <string name="danh_sach_san_pham">Danh sách sản phẩm</string>
    <string name="nhap_hang">Nhập hàng</string>
    <string name="kiem_hang">Kiểm hàng</string>
    <string name="nha_cung_cap">Nhà cung cấp</string>
    <string name="chuyen_hang">Chuyển  hàng</string>
    <string name="in_tem_ma_vach">In tem ma vạch</string>
    <string name="hint_edit_text">Tên, SKU, Barcode</string>
    <string name="tat_ca_loai_san_pham">Tất cả loại sản phẩm</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sku">SKU</string>
    <string name="barcode">Barcode</string>
    <string name="khoi_luong">Khối lượng</string>
    <string name="don_vi_tinh">Đơn vị tính</string>
    <string name="gia_san_pham">Giá sản phẩm</string>
    <string name="chua_bao_gom_thue">Chưa bao gồm thuế</string>
    <string name="thue_dau_ra">Thuế đầu ra</string>
    <string name="thue_dau_vao">Thuế đầu vào</string>
    <string name="gia_ban_le">Giá bán lẻ</string>
    <string name="gia_ban_buon">Giá bán buôn</string>
    <string name="gia_nhap">Giá nhập</string>
    <string name="kho_hang">Kho hàng</string>
    <string name="chi_nhanh_mac_dinh">Chi nhánh mặc định</string>
    <string name="vi_tri_luu_kho">Vị trí lưu kho:---</string>
    <string name="loai_san_pham">Loại sản phẩm</string>
    <string name="mo_ta_phan_loại_san_pham">Mô tả, phân loại sản phẩm</string>
    <string name="thong_tin_them">Thông tin thêm</string>
    <string name="co_the_ban">Có thể bán:</string>
    <string name="ton_kho">Tồn kho:</string>
    <string name="nhan_hieu">Nhãn hiệu</string>
    <string name="mo_ta">Mô tả</string>
    <string name="cho_phep_ban">Cho phép bán</string>
    <string name="dang_giao_dich">Đang giao dịch</string>
    <string name="xoa_san_pham">Xóa sản phẩm</string>
    <string name="phien_ban_san_pham">Phiên bản sản phẩm</string>
    <string name="kich_thuoc">Kích thước</string>
    <string name="chat_lieu">Chất liệu</string>
    <string name="mau_sac">Màu sắc</string>
    <string name="tim_va_them_san_pham">Tìm và thêm sản phẩm</string>
    <string name="___">---</string>
    <string name="don_hang_cua_ban_chua_co_san_pham_nao">Đơn hàng của bạn chưa có sản phẩm nào!</string>
    <string name="chon_san_pham">Chọn sản phẩm</string>
    <string name="ap_dung_khuyen_mai">Áp dụng khuyến mại</string>
    <string name="tong_so_luong">Tổng số lượng</string>
    <string name="tong_tien_hang">Tổng tiền hàng</string>
    <string name="chiet_khau">Chiết khấu</string>
    <string name="phi_giao_dich">Phí giao dịch</string>
    <string name="khach_hang">Khách hàng</string>
    <string name="them_khach_hang">Thêm khách hàng</string>
    <string name="chon_phuong_thuc_thanh_toan">Chọn phương thức thanh toán</string>
    <string name="them_ghi_chu">Thêm ghi chú</string>
    <string name="tam_tinh">Tạm tính</string>
    <string name="tao_don_va_giao_hang">Tạo đơn và giao hàng</string>
    <string name="thay_doi_phuong_thuc_dat_hang">Thay đổi phương thức đặt hàng</string>
    <string name="dat_hang">Đặt hàng</string>
    <string name="duyet">Duyệt</string>
    <string name="dong_goi">Đóng gói</string>
    <string name="xuat_kho">Xuất kho</string>
    <string name="hoan_thanh">Hoàn thành</string>
    <string name="tao_don_hang">Tạo đơn hàng</string>
    <string name="tao_don_va_duyet">Tạo đơn và duyệt</string>
    <string name="so_luong_quy_doi">Số lượng quy đổi</string>
    <string name="chon_nhieu">Chọn nhiều</string>
    <string name="thieu_hang">Thiếu hàng</string>
    <string name="chon_lai">Chọn lại</string>
    <string name="xong">Xong</string>
    <string name="so_luong_mua">Số lượng mua</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="huy">Hủy</string>
    <string name="thue">Thuế</string>
    <string name="call_api_khong_thanh_cong">Call api không thành công</string>
    <string name="call_api_thanh_cong">Call api thành công</string>
    <string name="tao_don_hang_thanh_cong">Tạo đơn hàng thành công</string>
    <string name="phien_ban">%s Phiên bản</string>
    <string name="quan_li_kho">Quản lí kho</string>
    <string name="khong_cho_phep_ban">Không cho phép bán</string>
    <string name="chi_tiet_san_pham">Chi tiết sản phẩm</string>
    <string name="ngung_giao_dich">Ngừng giao dịch</string>
    <string name="da_bao_gom_thue">Đã bao gồm thuế</string>
    <string name="SKU">SKU:</string>
    <string name="ban_co_chac_chan_muon_xoa_san_pham_nay_ra_khoi_don_hang">Bạn có chắc chán muốn xóa sản phẩm %s ra khỏi đơn hàng</string>
    <string name="nay_ra_khoi_don_hang"> này ra khỏi đơn hàng?</string>
    <string name="thoat">Thoát</string>
    <string name="dong_y">Đồng ý</string>
    <string name="khong_co_ket_qua_phu_hop">Không có kết quả phù hợp</string>
    <string name="vui_long_nhap_tu_khoa_khac_de_tim_kiem">Vui lòng nhập từ khóa khác để tìm kiếm</string>
    <string name="chi_tiet_phien_ban">Chi tiết phiên bản</string>
    <string name="khoi_luong1">%1$s %2$s</string>
    <string name="max_quantity">999,999.999</string>
    <string name="quantity_decimal">%1$s.%2$s</string>
    <string name="quantity">%1$s%2$s</string>

</resources>