<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_marginTop="@dimen/define_dimen_12"
        android:id="@+id/tvDialogDeleteProductTitle"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/xoa_san_pham"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
       android:padding="@dimen/define_dimen_12"
        android:gravity="center"
        android:id="@+id/tvDialogDeleteProductContent"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/black"
        android:text="trhytjtyfvfdfdfdgjgggggggggggggggggggggggggggggggggggg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogDeleteProductTitle"/>
    <Button
        android:textSize="@dimen/text_size_normal"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/define_dimen_12"
        android:text="@string/thoat"
        android:background="@drawable/shape_rec_white_bg_black_overlay_stroke_corner_define_dimen_05"
        android:id="@+id/btnDialogDeleteProductCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogDeleteProductContent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnDialogDeleteProductConfirm"/>
    <Button
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_normal"
        android:layout_marginTop="@dimen/define_dimen_12"
        android:text="@string/dong_y"
        android:background="@drawable/shape_rec_white_bg_black_overlay_stroke_corner_define_dimen_05"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:id="@+id/btnDialogDeleteProductConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogDeleteProductContent"
        app:layout_constraintLeft_toRightOf="@+id/btnDialogDeleteProductCancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>