<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center|top"
    android:orientation="vertical"
    >

    <include android:id="@+id/includeMainHeader"
        layout="@layout/layout_toolbar"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_overlay"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdMainAddOrder"
        app:cardElevation="@dimen/define_dimen_6"
        app:cardCornerRadius="@dimen/define_dimen_18"
        android:layout_marginTop="@dimen/define_dimen_48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/llMainAddOrder"
            android:padding="@dimen/define_dimen_60"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/define_dimen_48"
                android:layout_height="@dimen/define_dimen_48"
                android:src="@drawable/ic_add_circle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tao_don_va_giao_hang"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/rlMainListProduct"
        android:padding="@dimen/define_dimen_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivMainContentIcon"
            app:tint="@color/black_overlay"
            android:layout_width="@dimen/define_dimen_24"
            android:layout_height="@dimen/define_dimen_24"
            android:src="@drawable/ic_list_product"/>
        <TextView
            android:id="@+id/tvMainContent"
            android:layout_toRightOf="@+id/ivMainContentIcon"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/danh_sach_san_pham"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginLeft="@dimen/define_dimen_10"/>
        <ImageView
            app:tint="@color/black_overlay"
            android:id="@+id/ivMainContentNext"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_gravity="right"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_overlay"/>
    <RelativeLayout
        android:padding="@dimen/define_dimen_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_icon_import_goods"
            app:tint="@color/black_overlay"
            android:layout_width="@dimen/define_dimen_24"
            android:layout_height="@dimen/define_dimen_24"
            android:src="@drawable/ic_import_goods"/>
        <TextView
            android:layout_toRightOf="@+id/img_icon_import_goods"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nhap_hang"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginLeft="@dimen/define_dimen_10"/>
        <ImageView
            app:tint="@color/black_overlay"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_gravity="right"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_overlay"/>
    <RelativeLayout
        android:padding="@dimen/define_dimen_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_icon_check_product"
            app:tint="@color/black_overlay"
            android:layout_width="@dimen/define_dimen_24"
            android:layout_height="@dimen/define_dimen_24"
            android:src="@drawable/ic_check_product"/>
        <TextView
            android:layout_toRightOf="@+id/img_icon_check_product"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kiem_hang"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginLeft="@dimen/define_dimen_10"/>
        <ImageView
            app:tint="@color/black_overlay"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_gravity="right"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_overlay"/>
    <RelativeLayout
        android:padding="@dimen/define_dimen_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_icon_supplier"
            app:tint="@color/black_overlay"
            android:layout_width="@dimen/define_dimen_24"
            android:layout_height="@dimen/define_dimen_24"
            android:src="@drawable/ic_supplier"/>
        <TextView
            android:layout_toRightOf="@+id/img_icon_supplier"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nha_cung_cap"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginLeft="@dimen/define_dimen_10"/>
        <ImageView
            app:tint="@color/black_overlay"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_gravity="right"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_overlay"/>
    <RelativeLayout
        android:padding="@dimen/define_dimen_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_icon_shpping"
            app:tint="@color/black_overlay"
            android:layout_width="@dimen/define_dimen_24"
            android:layout_height="@dimen/define_dimen_24"
            android:src="@drawable/ic_shipping"/>
        <TextView
            android:layout_toRightOf="@+id/img_icon_shpping"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chuyen_hang"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginLeft="@dimen/define_dimen_10"/>
        <ImageView
            app:tint="@color/black_overlay"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_gravity="right"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/black_overlay"/>
    <RelativeLayout
        android:padding="@dimen/define_dimen_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_icon_barcode"
            app:tint="@color/black_overlay"
            android:layout_width="@dimen/define_dimen_24"
            android:layout_height="@dimen/define_dimen_24"
            android:src="@drawable/ic_barcode"/>
        <TextView
            android:layout_toRightOf="@+id/img_icon_barcode"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_tem_ma_vach"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginLeft="@dimen/define_dimen_10"/>
        <ImageView
            app:tint="@color/black_overlay"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_gravity="right"/>
    </RelativeLayout>




</LinearLayout>