<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.createorder.CreateOrderActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:padding="12dp"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivSelectVariantLeft"/>
        <RelativeLayout
            android:layout_marginRight="@dimen/define_dimen_12"
            android:layout_toLeftOf="@+id/ivSelectVariantAddProduct"
            android:layout_toRightOf="@+id/ivSelectVariantLeft"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/define_dimen_12"
            android:layout_marginStart="@dimen/define_dimen_12"
            android:layout_marginEnd="@dimen/define_dimen_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:drawableStart="@drawable/ic_search"
                android:textSize="@dimen/define_dimen_16"
                android:background="@drawable/shape_rec_edittext_bg_corner_define_dimen_20"
                android:id="@+id/edtSelectVariantSearch"
                android:hint="@string/tim_va_them_san_pham"
                android:padding="@dimen/define_dimen_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_marginRight="@dimen/define_dimen_4"
                android:background="@color/light_black"
                android:layout_toLeftOf="@id/ivSelectVariantBarcodeScanner"
                android:layout_width="1dp"
                android:layout_height="@dimen/define_dimen_30"
                android:layout_centerVertical="true"
                />
            <ImageView
                android:id="@+id/ivSelectVariantBarcodeScanner"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/define_dimen_24"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_barcode_scanner"/>

        </RelativeLayout>

        <ImageView
            android:layout_marginEnd="@dimen/define_dimen_12"
            android:id="@+id/ivSelectVariantAddProduct"
            app:tint="@color/black_overlay"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_add"
            android:layout_width="24dp"
            android:layout_height="24dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black_overlay"/>
    <RelativeLayout
        android:padding="@dimen/define_dimen_12"
        android:background="@color/edittext"
        android:layout_marginTop="@dimen/define_dimen_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black"
            android:id="@+id/tv_all_product"
            android:textSize="@dimen/text_size_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tat_ca_loai_san_pham"/>
        <ImageView
            android:layout_toRightOf="@+id/tv_all_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_down"/>
        <androidx.appcompat.widget.SwitchCompat
            app:track="@drawable/selector_rec_black_overlay_color_light_blue_selected_cornor_define_dimen_12"
            android:thumb="@drawable/selector_cir_white_color_blue_selected"
            android:layout_centerVertical="true"
            android:id="@+id/scSelectVariantChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_marginRight="@dimen/define_dimen_12"
            android:textColor="@color/black"
            android:layout_toLeftOf="@+id/scSelectVariantChange"
            android:textSize="@dimen/text_size_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chon_nhieu"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_weight="1"
        android:id="@+id/rclvSelectVariant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:background="@color/black_overlay"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        />
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/llSelectVariantBottom"
        android:alpha="0.8"
        android:orientation="horizontal"
        android:padding="@dimen/define_dimen_12"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSelectVariantReselect"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="@string/chon_lai"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/blue"
            android:background="@drawable/shape_rec_white_bg_blue_stroke_corner_topleft_bottomleft_define_dimen_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnSelectVariantFinished"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xong"
            android:background="@drawable/shape_rec_blue_bg_blue_stroke_corner_topright_bottomright_define_dimen_10"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>