<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.listproduct.ListProductActivity">
    <include layout="@layout/layout_toolbar"
        android:id="@+id/includeListProductHeader"
        />
    <TextView
        android:id="@+id/tvListProductName"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/define_dimen_24"
        android:textColor="@color/black"
      />
    <RelativeLayout
        android:layout_marginTop="@dimen/define_dimen_12"
        android:layout_marginStart="@dimen/define_dimen_12"
        android:layout_marginEnd="@dimen/define_dimen_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:drawableStart="@drawable/ic_search"
            android:textSize="@dimen/define_dimen_16"
            android:background="@drawable/shape_rec_edittext_bg_corner_define_dimen_20"
            android:id="@+id/edtListProductSearch"
            android:hint="@string/hint_edit_text"
            android:padding="@dimen/define_dimen_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_marginRight="@dimen/define_dimen_4"
            android:background="@color/light_black"
            android:layout_toLeftOf="@id/ivBarcodeScanner"
            android:layout_width="1dp"
            android:layout_height="@dimen/define_dimen_30"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/ivBarcodeScanner"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/define_dimen_24"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_barcode_scanner"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginStart="@dimen/define_dimen_12"
        android:layout_marginTop="@dimen/define_dimen_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvListProductAll"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            android:layout_marginTop="@dimen/define_dimen_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tat_ca_loai_san_pham"/>
        <ImageView
            app:tint="@color/black_overlay"
            android:layout_marginLeft="@dimen/define_dimen_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tvListProductAll"
            android:src="@drawable/ic_down"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_filter"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            app:tint="@color/light_black"
            android:layout_marginRight="@dimen/define_dimen_16"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tvListProductTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:background="@color/edittext"
        android:padding="@dimen/define_dimen_8"
        android:text="Số lượng sản phẩm" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srListProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/define_dimen_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rclvListProduct"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llListProductNoResult"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                app:tint="@color/black"
                android:layout_width="@dimen/define_dimen_100"
                android:layout_height="@dimen/define_dimen_100"
                android:src="@drawable/ic_search"/>
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/khong_co_ket_qua_phu_hop"/>
            <TextView
                android:layout_marginTop="@dimen/define_dimen_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/vui_long_nhap_tu_khoa_khac_de_tim_kiem"/>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>